--- a/TopPlaces/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/TopPlaces/en.lproj/MainStoryboard_iPhone.storyboard
@@ -18,7 +18,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="8FQ-4h-cH7" kind="relationship" relationship="viewControllers" id="QGb-oV-DfZ"/>
+                        <segue destination="UNE-T8-F2d" kind="relationship" relationship="viewControllers" id="QGb-oV-DfZ"/>
                         <segue destination="aLz-8W-A91" kind="relationship" relationship="viewControllers" id="J1j-G1-NWu"/>
                     </connections>
                 </tabBarController>
@@ -31,15 +31,15 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CBc-BZ-fV5" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController title="Top Places" id="8FQ-4h-cH7" customClass="TopPlacesTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="gpF-wA-DCq">
-                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Top Places Cell" textLabel="htP-nZ-IyF" detailTextLabel="fnc-Mq-qHo" style="IBUITableViewCellStyleSubtitle" id="82e-M6-uUE">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Top Places Cell" textLabel="htP-nZ-IyF" detailTextLabel="fnc-Mq-qHo" style="IBUITableViewCellStyleSubtitle" id="82e-M6-uUE">
                                 <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="htP-nZ-IyF">
@@ -59,6 +59,9 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <connections>
+                                    <segue destination="HBe-bk-Dbm" kind="push" identifier="Show Photos from Place" id="gFE-AO-xj4"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -66,10 +69,56 @@
                             <outlet property="delegate" destination="8FQ-4h-cH7" id="E3n-eM-9AX"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" systemItem="topRated" id="9qL-RO-AlA"/>
+                    <navigationItem key="navigationItem" title="Top Places" id="Pi6-62-5iI"/>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="635" y="34"/>
+            <point key="canvasLocation" x="1114" y="39"/>
+        </scene>
+        <!--Top Photos Table View Controller - Top Photos-->
+        <scene sceneID="Fj2-fi-YlD">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XbC-Fd-DOZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController title="Top Photos" id="HBe-bk-Dbm" customClass="TopPhotosTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="PI0-af-0Wz">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Top Photos Cell" textLabel="8Cy-iX-cGI" detailTextLabel="6g0-NH-E2d" style="IBUITableViewCellStyleSubtitle" id="Zus-Lx-TAy">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8Cy-iX-cGI">
+                                            <rect key="frame" x="10" y="2" width="38" height="22"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6g0-NH-E2d">
+                                            <rect key="frame" x="10" y="24" width="47" height="18"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="HBe-bk-Dbm" id="Vi0-3h-ZJt"/>
+                            <outlet property="delegate" destination="HBe-bk-Dbm" id="jWb-Ek-9Y4"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Photos from ..." id="C5O-6w-BmO"/>
+                </tableViewController>
+            </objects>
+            <point key="canvasLocation" x="1597" y="39"/>
         </scene>
         <!--Recent Photos Table View Controller - Recent Photos-->
         <scene sceneID="y3P-H8-ALq">
@@ -117,15 +166,26 @@
             </objects>
             <point key="canvasLocation" x="635" y="620"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Cpg-tj-aWS">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bUA-H5-90V" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="UNE-T8-F2d" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="topRated" id="9qL-RO-AlA"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="z7X-PV-npW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8FQ-4h-cH7" kind="relationship" relationship="rootViewController" id="CHr-F9-RWw"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="635" y="39"/>
+        </scene>
     </scenes>
-    <classes>
-        <class className="RecentPhotosTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RecentPhotosTableViewController.h"/>
-        </class>
-        <class className="TopPlacesTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPlacesTableViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
