--- a/TopPlaces/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/TopPlaces/en.lproj/MainStoryboard_iPhone.storyboard
@@ -19,7 +19,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="UNE-T8-F2d" kind="relationship" relationship="viewControllers" id="QGb-oV-DfZ"/>
-                        <segue destination="aLz-8W-A91" kind="relationship" relationship="viewControllers" id="J1j-G1-NWu"/>
+                        <segue destination="tmO-c6-dIL" kind="relationship" relationship="viewControllers" id="J1j-G1-NWu"/>
                     </connections>
                 </tabBarController>
             </objects>
@@ -160,7 +160,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gR2-vP-fcm" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController title="Recent Photos" id="aLz-8W-A91" customClass="RecentPhotosTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="SeD-HO-mDQ">
-                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -188,6 +188,9 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <connections>
+                                    <segue destination="pDl-0j-Cwq" kind="push" identifier="Show Photo" id="7s9-6U-saG"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -195,10 +198,10 @@
                             <outlet property="delegate" destination="aLz-8W-A91" id="eqz-4O-a3T"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" systemItem="recents" id="nnB-4v-dkg"/>
+                    <navigationItem key="navigationItem" title="Recent Photos" id="hGk-TG-Z7C"/>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="635" y="620"/>
+            <point key="canvasLocation" x="1114" y="620"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Cpg-tj-aWS">
@@ -219,31 +222,32 @@
             </objects>
             <point key="canvasLocation" x="635" y="39"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="MxF-Fy-SgO">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RsL-9w-tpz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="tmO-c6-dIL" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="recents" id="nnB-4v-dkg"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="rbF-Hy-z7j">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="aLz-8W-A91" kind="relationship" relationship="rootViewController" id="6Ts-oB-VnZ"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="635" y="620"/>
+        </scene>
     </scenes>
-    <classes>
-        <class className="CommonTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommonTableViewController.h"/>
-        </class>
-        <class className="PhotoViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotoViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
-            </relationships>
-        </class>
-        <class className="RecentPhotosTableViewController" superclassName="CommonTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RecentPhotosTableViewController.h"/>
-        </class>
-        <class className="TopPhotosTableViewController" superclassName="CommonTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPhotosTableViewController.h"/>
-        </class>
-        <class className="TopPlacesTableViewController" superclassName="CommonTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPlacesTableViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="7s9-6U-saG"/>
+    </inferredMetricsTieBreakers>
 </document>
