--- a/TopPlaces/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/TopPlaces/en.lproj/MainStoryboard_iPhone.storyboard
@@ -139,8 +139,14 @@
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" id="r1l-Fh-8w6">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="367"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                     </imageView>
+                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="whiteLarge" id="EMj-Je-v9l">
+                                        <rect key="frame" x="142" y="165" width="37" height="37"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                    </activityIndicatorView>
                                 </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -149,6 +155,7 @@
                     <connections>
                         <outlet property="imageView" destination="r1l-Fh-8w6" id="nyc-Cb-Eew"/>
                         <outlet property="scrollView" destination="TI1-RI-cJx" id="dbw-zb-3eb"/>
+                        <outlet property="spinner" destination="EMj-Je-v9l" id="4aT-cl-Gpr"/>
                     </connections>
                 </viewController>
             </objects>
@@ -242,6 +249,30 @@
             <point key="canvasLocation" x="635" y="620"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="CommonTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommonTableViewController.h"/>
+        </class>
+        <class className="PhotoViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotoViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="spinner" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+                <relationship kind="outlet" name="toolbarTitle" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="RecentPhotosTableViewController" superclassName="CommonTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RecentPhotosTableViewController.h"/>
+        </class>
+        <class className="TopPhotosTableViewController" superclassName="CommonTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPhotosTableViewController.h"/>
+        </class>
+        <class className="TopPlacesTableViewController" superclassName="CommonTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPlacesTableViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
